fixed the select overflow width situation

--- a/CSS/regform.css
+++ b/CSS/regform.css
@@ -34,12 +34,10 @@ input, textarea{
 select{
     border:1px solid black;
     margin-top:0.5em;
+    text-overflow:ellipsis;
+    overflow:hidden;
+    max-width: 100%;
 }
 
 
-#buttons{
-    display:flex;
-    justify-content: space-evenly;
-    padding:0.5em;
-}
 
